# Substitution-Cipher

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  ChoiceLogic.h  ConsoleApplication2.cpp  InputValidation.cpp  InputValidation.h  PROJECT_STRUCTURE.md  README.md  choiceLogic.cpp  main.cpp
.github/: copilot-instructions.md
.github/workflows/: c-cpp.yml
Useless/: Chat History.txt  bestpractices1-ChatHistory.txt  main
Useless/Old/: ConsoleApplication2.sln
Useless/bestpractices1/: InputValidation.cpp  bestpractices1.vcxproj  choiceLogic.cpp
Useless/legacy-files/: ConsoleApplication2.cpp  ConsoleApplication2.vcxproj
Useless/legacy-vs/: bestpractices1.sln  bestpractices1.vcxproj.filters
bestpractices1/: ChoiceLogic.h  InputValidation.cpp  InputValidation.h  bestpractices1.vcxproj  bestpractices1.vcxproj.filters  choiceLogic.cpp  main.cpp
docs/: RESTRUCTURING_SUMMARY.md
docs/guides/: BUILD.md  LINUX_QUICK_REFERENCE.md  MACOS_QUICK_REFERENCE.md  REFACTORING_SUMMARY.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_COMPATIBILITY_FINAL_SUMMARY.md  WINDOWS_COMPATIBILITY_SETUP.md  WINDOWS_QUICK_REFERENCE.md  WINDOWS_READY_CHECKLIST.md
docs/setup/: setup-linux.sh  setup-macos.sh  setup-windows.bat  setup-windows.ps1
